--- a/src/apps_common/footer/templates/footer/footer.html
+++ b/src/apps_common/footer/templates/footer/footer.html
@@ -2,7 +2,65 @@
 {% load footer %}
 
 <footer itemscope itemtype="https://schema.org/WPFooter">
-  <div class="grid-block">
+    <div class="grid-block">
+
+        <div class="flex footer-box">
+            <div class="logo-box">
+                <!-- {% if is_main_page %}
+                <!--<div class="logo"></div> -->
+                <!-- {% else %}
+                 <a href="/" class="logo"></a>
+                 {% endif %} -->
+
+                <span class="first-logo">Celebrant Robin </span>
+                <span class="second-logo">WEDDING OFFICIANT </span>
+            </div>
+            <!-- <div id="mobile-menu-button">
+                 <div class="burger"></div>
+             </div> -->
+            <div class="menu mobile-menu">
+
+            </div>
+
+
+            <div class="menu-box-footer">
+
+                <nav class="menu">
+
+                    <ul>
+                        <li> <a href="#gallery" class itemprop="url"> <span>Photos </span> </a> </li>
+                        <li> <a href="#gallery" class itemprop="url"> <span>Testimonials </span> </a> </li>
+                        <li> <a href="#gallery" class itemprop="url"> <span>Blog </span> </a> </li>
+                    </ul>
+                </nav>
+
+                <div class="social-links"> <!--menu-box-->
+
+                    <a href="https://www.weddingwire.com/biz/celebrant-robin-elkins-park/cf347820f3bd8b48.html" target="_blank" class="wr"></a>"
+                    <a href="https://www.facebook.com/celebrantrobin/" class="fb"></a>
+                    <a href="https://www.linkedin.com/in/robinieisenberg/" class="ln"></a>
+
+                </div>
+
+            </div>
+
+            <div class="contact">
+                <a href="tel:2674810605" class="phone-header">
+                    <span class="phone">267-481-0605</span> </a>
+            </div>
+
+
+        </div>
+        <div class="dl-logo-box">
+            {% dl_link %}
+        </div>
+    </div>
+</footer>
+
+
+
+
+<!--  <div class="grid-block">
 
     <div class="flex">
       <div class="copyright-box">
@@ -14,5 +72,4 @@
       </div>
     </div>
 
-  </div>
-</footer>
+  </div>-->
