--- a/src/apps_common/mailerlite/static/mailerlite/scss/_core.scss
+++ b/src/apps_common/mailerlite/static/mailerlite/scss/_core.scss
@@ -3,7 +3,7 @@
 // Цвета
 $gray: #909090;
 $text_color: #404040;
-$link_color: #2268B9;
+$link_color: #d3705a;;
 
 // Мобильная версия
 $max_width: 640px;
