--- a/src/apps_common/mailerlite/static/mailerlite/scss/layout.scss
+++ b/src/apps_common/mailerlite/static/mailerlite/scss/layout.scss
@@ -68,9 +68,9 @@ p {
 
 a {
   color: $link_color;
+  @include font_default;
   word-break: break-word;
   text-decoration: underline;
-
   &[href^="#"] {
     cursor: default;
   }
