--- a/src/apps_common/menu/static/menu/scss/main_menu.scss
+++ b/src/apps_common/menu/static/menu/scss/main_menu.scss
@@ -1,11 +1,11 @@
 @import 'mixins';
 
-$menu_text_color: #404040;
-$menu_hover_color: #82BD36;
+$menu_text_color: #ff7c6e;
+$menu_hover_color: #ff7c6e;
 $menu_active_color: #82BD36;
 
-$mobile_background: #5B3C2A;
-$mobile_text_color: #FFFFFF;
+$mobile_background: #fff;
+$mobile_text_color: #ff7c6e;
 $mobile_hover_color: $menu_hover_color;
 $mobile_active_color: $menu_active_color;
 
@@ -24,10 +24,12 @@ $mobile_active_color: $menu_active_color;
     a {
       display: inline-block;
       padding: 5px;
-      @include fontsize_default;
+      font-size: 20px;
+      @include font_default;
 
       &:hover {
-        color: $menu_hover_color;
+
+      @include transform-links;
       }
     }
 
@@ -58,19 +60,23 @@ $mobile_active_color: $menu_active_color;
 // мобильное меню
 .mobile-menu {
   position: absolute;
-  padding: 0 70px 0 40px;
-  right: -100%;
-  top: 0;
-  width: 60%;
+  border-bottom: 2px solid #ffb546;
+/*  padding: 0 70px 0 40px;*/
+    box-shadow: 0 40px 60px -5px rgba(162,126,108,0.4);
+
+  right: 0;
+  top: -125%;
+  width: 100%;
   height: 768px;
-  height: 100vh;
-  z-index: 50;
+  height: 230%;
+  z-index: -1;
   text-align: left;
   background: $mobile_background;
   @include border-box;
-  @include transition(right 0.4s);
+  @include transition(top 0.4s);
   @include media_interval($media_mobile, 0) {
     display: none;
+    
   }
   @include media_interval(0, $media480) {
     width: 80%;
@@ -79,8 +85,8 @@ $mobile_active_color: $menu_active_color;
 
   ul {
     position: relative;
-    top: 50%;
-    @include transform(translate3d(0, -50%, 0));
+/*    top: 50%;
+    @include transform(translate3d(0, -50%, 0));*/
   }
 
   li {
@@ -97,7 +103,7 @@ $mobile_active_color: $menu_active_color;
     a {
       display: inline-block;
       padding: 5px;
-      font-weight: bold;
+/*      font-weight: bold;*/
       vertical-align: top;
       color: $mobile_text_color;
       @include font-size(22px, 28px);
@@ -113,7 +119,8 @@ $mobile_active_color: $menu_active_color;
   }
 
   @at-root .main-menu-opened & {
-    right: 0;
+    top: 78px;
+/*    z-index: 0;*/
   }
 }
 
