--- a/src/apps_common/social_networks/static/social_networks/scss/social_links.scss
+++ b/src/apps_common/social_networks/static/social_networks/scss/social_links.scss
@@ -1,12 +1,13 @@
 @import "mixins";
 
-$icon_size: 32px;
+$icon_size: 40px;
 
 .social-links {
+    display: inline-block;
   a {
     display: inline-block;
-    margin-right: 10px;
-    width: 20px;
+    margin-right: 15px;
+    width: 40px;
     vertical-align: middle;
     @include opacity(1);
 
@@ -22,21 +23,19 @@ $icon_size: 32px;
       background-size: rel-background-size($icon_size, $icon_size);
     }
 
+    &.wr:before {
+      background-position: rel-background-position($icon_size, $icon_size, 0, 0);
+    }
     &.fb:before {
-      background-position: rel-background-position($icon_size, $icon_size, -30px, -54px);
+      background-position: rel-background-position($icon_size, $icon_size, -80px, 0px);
     }
-    &.tw:before {
-      background-position: rel-background-position($icon_size, $icon_size, -64px, -54px);
-    }
-    &.go:before {
-      background-position: rel-background-position($icon_size, $icon_size, -98px, -54px);
-    }
-    &.in:before {
-      background-position: rel-background-position($icon_size, $icon_size, -200px, -54px);
+    &.ln:before {
+      background-position: rel-background-position($icon_size, $icon_size, -120px, 0px);
     }
 
     &:hover {
-      @include opacity(0.8);
+         @include transform-links;
+      
     }
   }
 }
