--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -8,99 +8,101 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" prefix="og: http://ogp.me/ns#" class="no-js"
       lang="{{ LANGUAGE_CODE }}" data-google-apikey="{{ GOOGLE_APIKEY }}">
-<head>
-  <title>{% block title %}{{ request.seo.title }}{% endblock %}</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <title>{% block title %}{{ request.seo.title }}{% endblock %}</title>
+        <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  {% block metatags %}
-    {% include 'seo/metatags.html' %}
-  {% endblock metatags %}
+                {% block metatags %}
+                {% include 'seo/metatags.html' %}
+                {% endblock metatags %}
 
-  <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/x-icon"/>
+                <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/x-icon"/>
 
-  {# === SCRIPTS === #}
-  <script>
-    var docElement = document.documentElement;
-    docElement.className = docElement.className.replace(/\bno-js\b/, '') + ' js';
-  </script>
+                {# === SCRIPTS === #}
+                <script>
+                    var docElement = document.documentElement;
+                    docElement.className = docElement.className.replace(/\bno-js\b/, '') + ' js';
+                </script>
+                {# === STYLES === #}
+                {% include 'pipeline/_loadcss.html' %}
+                {% block critical_css %}
+                {% inline_stylesheet 'critical' %}
+                {% endblock critical_css %}
 
-  {# === STYLES === #}
-  {% include 'pipeline/_loadcss.html' %}
+                {% stylesheet 'fonts' %}
 
-  {% block critical_css %}
-    {% inline_stylesheet 'critical' %}
-  {% endblock critical_css %}
+                {% stylesheet 'core' %}
+                {% block static_head %}{% endblock static_head %}
 
-  {% stylesheet 'core' %}
-  {% block static_head %}{% endblock static_head %}
+                {% include 'pipeline/_preloadcss.html' %}
 
-  {% include 'pipeline/_preloadcss.html' %}
+                {% seo_counters 'head' %}
+                </head>
+                <body class="{% block bodyclass %}{% endblock %}">
+                    {% seo_counters 'body_top' %}
 
-  {% seo_counters 'head' %}
-</head>
-<body class="{% block bodyclass %}{% endblock %}">
-  {% seo_counters 'body_top' %}
+                    <div id="wrapper">
+                        {% block header %}
+                        <div id="header-wrapper">
+                            <div id="header-cell">
+                                {% if not is_main_page %}
+                                <!--noindex-->
+                                {% endif %}
 
-  <div id="wrapper">
-    {% block header %}
-      <div id="header-wrapper">
-        <div id="header-cell">
-          {% if not is_main_page %}
-            <!--noindex-->
-          {% endif %}
+                                {% block header_content %}
+                                {% header %}
+                                {% endblock header_content %}
 
-          {% block header_content %}
-            {% header %}
-          {% endblock header_content %}
+                                {% if not is_main_page %}
+                                <!--/noindex-->
+                                {% endif %}
+                            </div>
+                        </div>
+                        {% endblock header %}
 
-          {% if not is_main_page %}
-            <!--/noindex-->
-          {% endif %}
-        </div>
-      </div>
-    {% endblock header %}
+                        <div id="content-wrapper">
+                            <div id="content">
+                                {% block content %}
 
-    <div id="content-wrapper">
-      <div id="content">
-        {% block content %}{% endblock content %}
-      </div>
-    </div>
+                                {% endblock content %}
+                            </div>
+                        </div>
 
-    {% block footer %}
-      <div id="footer-wrapper">
-        <div id="footer-cell">
-          {% if not is_main_page %}
-            <!--noindex-->
-          {% endif %}
+                        {% block footer %}
+                        <div id="footer-wrapper">
+                            <div id="footer-cell">
+                                {% if not is_main_page %}
+                                <!--noindex-->
+                                {% endif %}
 
-          {% block footer_content %}
-            {% footer %}
-          {% endblock footer_content %}
+                                {% block footer_content %}
+                                {% footer %}
+                                {% endblock footer_content %}
 
-          {% if not is_main_page %}
-            <!--/noindex-->
-          {% endif %}
-        </div>
-      </div>
-    {% endblock footer %}
-  </div>
+                                {% if not is_main_page %}
+                                <!--/noindex-->
+                                {% endif %}
+                            </div>
+                        </div>
+                        {% endblock footer %}
+                    </div>
 
 
-  <script src="{% url 'jsi18n' %}"></script>
+                    <script src="{% url 'jsi18n' %}"></script>
 
-  <!--[if lte IE 9]>
-    <script src="{% static 'polyfills/es5-shim.min.js' %}"></script>
-    <script src="{% static 'polyfills/respond.min.js' %}" defer async></script>
-  <![endif]-->
+                    <!--[if lte IE 9]>
+                      <script src="{% static 'polyfills/es5-shim.min.js' %}"></script>
+                      <script src="{% static 'polyfills/respond.min.js' %}" defer async></script>
+                    <![endif]-->
 
-  {% block static_js %}
-    {% js_storage_out %}
-    {% javascript 'core' %}
-  {% endblock static_js %}
+                    {% block static_js %}
+                    {% js_storage_out %}
+                    {% javascript 'core' %}
+                    {% endblock static_js %}
 
-  <script src="{% static 'polyfills/loader.js' %}" defer async></script>
+                    <script src="{% static 'polyfills/loader.js' %}" defer async></script>
 
-  {% seo_counters 'body_bottom' %}
-</body>
-</html>
+                    {% seo_counters 'body_bottom' %}
+                </body>
+                </html>
